tests/snapshots/run_wpt_conformance__coreml_pad_float32_2D_tensor_with_options_value_as_NaN.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float32 2D tensor with options.value as NaN, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'mode' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f32[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value="NaN");
  }

  outputs { padOutput; }
}
