tests/snapshots/run_wpt_conformance__coreml_pad_int64_2D_tensor_with_options_value_as_bigint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad int64 2D tensor with options.value as bigint, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, tensor<bool, tensor<fp16, tensor<fp32, tensor<int16, tensor<int32, tensor<int8, tensor<uint16, tensor<uint8 }; got tensor<int64, [3, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: i64[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value="9007199254740992");
  }

  outputs { padOutput; }
}
