tests/snapshots/run_wpt_conformance__coreml_padding_float32_0D_constant_tensor_with_empty_paddings_should_be_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js padding float32 0D constant tensor with empty paddings should be no-op, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type pad: Required param 'constant_val' is missing

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([228, 27, 182, 65]);
  }

  nodes {
    [padOutput] = pad(operand_0, label="", mode="", value=null);
  }

  outputs { padOutput; }
}
